# meldritch

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CODEX_DEPENDENCY_ADDENDUM.md  CODEX_PLAN_PROMPT.md  Cargo.toml  DSP_ALGORITHMS.md  EURORACK_PRINCIPLES.md  FEATURES.md  INVARIANTS.md  ML_FORMATS.md  NUMERICS_AND_64BIT.md  README.md  ROADMAP.md  TESTING_STRATEGY.md  TODO.md
assets/samples/voice/: README.md  raven_chris_goringe_librivox_pd.toml
crates/meldritch-app/: Cargo.toml
crates/meldritch-app/src/: lib.rs
crates/meldritch-audio/: Cargo.toml
crates/meldritch-audio/src/: audio_publication.rs  device_output.rs  lib.rs  published_audio.rs  realtime_queue.rs  realtime_status.rs  transport.rs
crates/meldritch-cli/: Cargo.toml
crates/meldritch-cli/src/: main.rs
crates/meldritch-core/: Cargo.toml
crates/meldritch-core/src/: lib.rs
crates/meldritch-dsl/: Cargo.toml
crates/meldritch-dsl/src/: lib.rs  song.rs
crates/meldritch-dsl/tests/: ml_examples.rs
crates/meldritch-render/: Cargo.toml
crates/meldritch-render/src/: coordinator.rs  dsp.rs  dynamics.rs  effects.rs  futures.rs  lib.rs  live_edit.rs  mastering.rs  modulation.rs  performance_fx.rs  phrases.rs  song_render.rs  stereo_fx.rs  transforms.rs
crates/meldritch-render/tests/: song_examples.rs
crates/meldritch-tui/: Cargo.toml
crates/meldritch-tui/src/: lib.rs
fixtures/: basic_drums.toml  control_relations.toml  explicit_relations.toml  minimal_kick.toml  showcase.toml  sidechain_relations.toml  warehouse.toml
fixtures/audio/: MANIFEST.md
songs/examples/: CAPABILITIES.md
songs/examples/00-minimal-synth/: ACCEPTANCE.md  main.mlperformance
songs/examples/00-minimal-synth/synths/: drone.mlsynth
songs/examples/01-synth-note-pattern/: ACCEPTANCE.md  main.mlperformance
songs/examples/01-synth-note-pattern/patterns/: bass-line.mlpattern
songs/examples/01-synth-note-pattern/synths/: bass.mlsynth
songs/examples/02-synth-parameter-pattern/: ACCEPTANCE.md  main.mlperformance
songs/examples/02-synth-parameter-pattern/patterns/: bass-line.mlpattern  filter-sweep.mlpattern
songs/examples/02-synth-parameter-pattern/synths/: swept-bass.mlsynth
songs/examples/03-dsp-chain/: ACCEPTANCE.md  main.mlperformance
songs/examples/03-dsp-chain/dsp/: echo.mldsp
songs/examples/03-dsp-chain/patterns/: lead.mlpattern
songs/examples/03-dsp-chain/synths/: lead.mlsynth
songs/examples/04-dsp-parameter-pattern/: ACCEPTANCE.md  main.mlperformance
songs/examples/04-dsp-parameter-pattern/dsp/: echo.mldsp
songs/examples/04-dsp-parameter-pattern/patterns/: echo-motion.mlpattern
songs/examples/09-curated-performance-controls/: ACCEPTANCE.md  main.mlperformance
songs/examples/11-session-capture/: ACCEPTANCE.md  main.mlperformance
songs/examples/15-launch-control-xl-input/: ACCEPTANCE.md  main.mlperformance
songs/examples/16-launch-control-xl-playground/: ACCEPTANCE.md  main.mlperformance
songs/examples/16-launch-control-xl-playground/patterns/: playground-bounce-fill.mlpattern  playground-bounce.mlpattern  playground-climb-fill.mlpattern  playground-climb.mlpattern  playground-line-fill.mlpattern  playground-line.mlpattern  (+2 more)
songs/examples/17-launch-control-xl-ensemble/: ACCEPTANCE.md  main.mlperformance
tools/: check.sh  control-events-check.sh  control-events.sh  dirty-pattern.sh  fetch-raven-voice-sample.sh  manifest-check.sh  manifest-summary.sh  relations.sh  render-control-fixture.sh  render-controlled-fixture.sh  render-fixture.sh
tools/csound/: generate-fixtures.sh  meldritch-fixtures.orc
(+53 files in other folders)
