[workspace]
members = [
    "crates/meldritch-audio",
    "crates/meldritch-cli",
    "crates/meldritch-core",
    "crates/meldritch-dsl",
    "crates/meldritch-render",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.97"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
hound = "3"
serde = { version = "1", features = ["derive"] }
toml = "1"
