[workspace]
members = [
    "crates/meldritch-app",
    "crates/meldritch-audio",
    "crates/meldritch-cli",
    "crates/meldritch-core",
    "crates/meldritch-dsl",
    "crates/meldritch-render",
    "crates/meldritch-tui",
]
resolver = "2"

[package]
name = "meldritch"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "meldritch"
path = "crates/meldritch-cli/src/main.rs"

[dependencies]
clap.workspace = true
meldritch-app = { path = "crates/meldritch-app" }
meldritch-audio = { path = "crates/meldritch-audio" }
meldritch-core = { path = "crates/meldritch-core" }
meldritch-dsl = { path = "crates/meldritch-dsl" }
meldritch-render = { path = "crates/meldritch-render" }
meldritch-tui = { path = "crates/meldritch-tui" }
serde.workspace = true
serde_json.workspace = true

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.97"

[workspace.dependencies]
arc-swap = "1"
clap = { version = "4", features = ["derive"] }
cpal = "0.18"
crossterm = "0.29"
hound = "3"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
