[package]
name = "meldritch-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
meldritch-audio = { path = "../meldritch-audio" }
meldritch-core = { path = "../meldritch-core" }
meldritch-dsl = { path = "../meldritch-dsl" }
meldritch-render = { path = "../meldritch-render" }
