[package]
name = "meldritch-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
meldritch-app = { path = "../meldritch-app" }
meldritch-audio = { path = "../meldritch-audio" }
meldritch-core = { path = "../meldritch-core" }
meldritch-dsl = { path = "../meldritch-dsl" }
meldritch-render = { path = "../meldritch-render" }
meldritch-tui = { path = "../meldritch-tui" }
midir.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
