[package]
name = "meldritch-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
crossterm.workspace = true
meldritch-app = { path = "../meldritch-app" }
meldritch-core = { path = "../meldritch-core" }
ratatui.workspace = true

[dev-dependencies]
meldritch-audio = { path = "../meldritch-audio" }
meldritch-render = { path = "../meldritch-render" }
